# ai-text-summarizer

./: Dockerfile  README.md  Untitled.ipynb  app.py  email_triage_env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server_app.py
.ipynb_checkpoints/: app-checkpoint.py
